base/falco/external-oauth2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-sdp
  namespace: falco
spec:
  type: ExternalName
  externalName: oauth2-proxy-sdp.oauth2.svc.cluster.local
  ports:
  - port: 4180
