base/falco/sysdig-inspect-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sysdig-inspect
  namespace: falco
  labels:
    app: sysdig-inspect
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - sysdig-inspect.dev.sdpaks.equinor.com
    secretName: sysdig-inspect-tls
  rules:
    - host: sysdig-inspect.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: sysdig-inspect-api
              servicePort: 80
          - path: /
            backend:
              serviceName: sysdig-inspect-web
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sysdig-inspect-auth
  namespace: falco
  labels:
    app: sysdig-inspect
spec:
  tls:
  - hosts:
    - sysdig-inspect.dev.sdpaks.equinor.com
    secretName: sysdig-inspect-tls
  rules:
    - host: sysdig-inspect.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
